After Login respective current location of the customer and driver will be shown.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyUberApp</string>
+    <string name="title_activity_drivers_map">Map</string>
+    <string name="title_activity_customer_map">Map</string>
 </resources>
